test done and its working
