# src/controllers/ingredients.js
@@ -2,9 +2,9 @@ const mongodb = require('../db/connect');
 const ObjectId = require('mongodb').ObjectId;
 
 const getIngredients = async(req, res, next) => {
-    console.log("In get Ingredients");
+    console.log("In get ingredients");
     try {
-        const result = await mongodb.getDb().db('Group08-Project03').collection('Ingredients').find({});
+        const result = await mongodb.getDb().db('Group08-Project03').collection('ingredients').find({});
         result.toArray().then((lists) => {
             res.setHeader('Content-Type', 'application/json');
             res.status(200).json(lists);
